--- a/WorkingWithVisualStudio/Views/Home/Index.cshtml
+++ b/WorkingWithVisualStudio/Views/Home/Index.cshtml
@@ -8,13 +8,11 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Working with Visual Studio</title>
-    <link rel="stylesheet" href="~/css/bundle.min.css" />
-    <script src="~/js/bundle.min.js"></script>
+    <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.min.css" />
 </head>
-<body>
-    <h3>Products</h3>
-    <p>Request time: Nunya Damn Business!</p>
-    <table>
+<body class="p-1">
+    <h3 class="text-center">Products</h3>
+    <table class="table table-bordered table-striped">
         <thead>
             <tr><td>Name</td><td>Price</td></tr>
         </thead>
@@ -28,5 +26,10 @@
             }
         </tbody>
     </table>
+    <div class="text-center">
+        <a class="btn btn-primary" asp-action="AddProduct">
+            Add New Product
+        </a>
+    </div>
 </body>
 </html>
